--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"author": "Jirka",
 	"main": "server.js",
 	"scripts": {
-		"start": "node Abschlussarbeit/Server/server.js"
+		"start": "node Abschlussarbeit/server.js"
 	},
 	"engines": {
 		"node": "8.10.0"
